third_party/move/move-model/tests/sources/expressions_inference_err.exp
error: unable to infer type: `?2`
  ┌─ tests/sources/expressions_inference_err.move:7:16
  │
7 │       let f = |x|x;
  │                ^
